force-app/main/default/objects/Activity/fields/ACT_History_Type__c.field-meta.xml
<CustomField>
    <fullName>ACT_History_Type__c</fullName>
    <label>ACT History Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Contact Completed</fullName>
            </value>
            <value>
                <fullName>Problem Resolution progressing</fullName>
            </value>
            <value>
                <fullName>Problem Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>