force-app/main/default/objects/Activity/fields/Business_Improvement_Area__c.field-meta.xml
<CustomField>
    <fullName>Business_Improvement_Area__c</fullName>
    <label>Business Improvement Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>