force-app/main/default/objects/Activity/fields/Corporate_Call_Issue__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Call_Issue__c</fullName>
    <label>Corporate Contact - Service Type*</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Location Assistance</fullName>
                <label>Attraction - Expansion &amp; Location Assistance</label>
            </value>
            <value>
                <fullName>Attraction_New_Investment</fullName>
                <label>Attraction - New Investment (FDI &amp; Relocation)</label>
            </value>
            <value>
                <fullName>Biz Development - Business Introduction</fullName>
            </value>
            <value>
                <fullName>Biz Development - Cluster Development</fullName>
            </value>
            <value>
                <fullName>Biz Development - Delegation</fullName>
                <label>Biz Development - Delegation Assistance</label>
            </value>
            <value>
                <fullName>Biz Development - Event Assistance</fullName>
            </value>
            <value>
                <fullName>Biz Development - Expansion Assistance</fullName>
            </value>
            <value>
                <fullName>Export Assistance</fullName>
                <label>Biz Development - Export Assistance</label>
            </value>
            <value>
                <fullName>Biz Development - Import</fullName>
                <label>Biz Development - Import Assistance</label>
            </value>
            <value>
                <fullName>Biz Development - Partnership Development</fullName>
            </value>
            <value>
                <fullName>Biz Dev - PR &amp; Marketing</fullName>
                <label>Biz Development - PR &amp; Marketing</label>
            </value>
            <value>
                <fullName>Biz Development - Startup Assistance</fullName>
            </value>
            <value>
                <fullName>Biz Development - TAP Program</fullName>
            </value>
            <value>
                <fullName>Biz Development - Workforce Development</fullName>
            </value>
            <value>
                <fullName>Building Permit</fullName>
                <label>City - Building Permit</label>
            </value>
            <value>
                <fullName>IMIT</fullName>
                <label>City - IMIT</label>
            </value>
            <value>
                <fullName>Planning Application</fullName>
                <label>City - Planning Issue (Zoning &amp; OP)</label>
            </value>
            <value>
                <fullName>City – Preliminary Project Review</fullName>
            </value>
            <value>
                <fullName>City – Property maintenance and standards</fullName>
            </value>
            <value>
                <fullName>City – Property taxes</fullName>
            </value>
            <value>
                <fullName>Other Municipal Regulations</fullName>
                <label>City - Regulatory</label>
            </value>
            <value>
                <fullName>City_TESS</fullName>
                <label>City - TESS</label>
            </value>
            <value>
                <fullName>City – Transportation</fullName>
            </value>
            <value>
                <fullName>Regulatory - Federal</fullName>
                <label>Regulatory Issues - Federal</label>
            </value>
            <value>
                <fullName>Provincial Regulations</fullName>
                <label>Regulatory Issues - Provincial</label>
            </value>
            <value>
                <fullName>Sponsorship Request</fullName>
            </value>
            <value>
                <fullName>Hydro Issue</fullName>
                <label>Utility - Electricity</label>
            </value>
            <value>
                <fullName>Utility - Gas</fullName>
            </value>
            <value>
                <fullName>Water Issue</fullName>
                <label>Utility - Water</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>