force-app/main/default/objects/Activity/fields/Councillor_Requested__c.field-meta.xml
<CustomField>
    <fullName>Councillor_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Councillor Requested</label>
    <type>Checkbox</type>
</CustomField>