force-app/main/default/objects/Activity/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <description>The name of the user that created the record</description>
    <formula>CreatedBy.FirstName + &#39; &#39;+ CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the user that created the record</inlineHelpText>
    <label>Created By</label>
    <type>Text</type>
</CustomField>