force-app/main/default/objects/Activity/fields/Mayor_s_Office_Requested__c.field-meta.xml
<CustomField>
    <fullName>Mayor_s_Office_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mayor&#39;s Office Requested</label>
    <type>Checkbox</type>
</CustomField>