force-app/main/default/objects/Activity/fields/Staff_Contact__c.field-meta.xml
<CustomField>
    <fullName>Staff_Contact__c</fullName>
    <label>Staff Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>