force-app/main/default/objects/Activity/fields/Thompson_Update__c.field-meta.xml
<CustomField>
    <fullName>Thompson_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you would like to report this activity to Councillor Thompson.</inlineHelpText>
    <label>Thompson Update</label>
    <type>Checkbox</type>
</CustomField>