force-app/main/default/objects/Activity/fields/Thompson_Update_Description__c.field-meta.xml
<CustomField>
    <fullName>Thompson_Update_Description__c</fullName>
    <inlineHelpText>Provide the update for Councillor Thompson.</inlineHelpText>
    <label>Thompson Update Description</label>
    <type>TextArea</type>
</CustomField>