force-app/main/default/objects/Activity/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <label>Ward</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ward 1 Etobicoke North</fullName>
            </value>
            <value>
                <fullName>Ward 2 Etobicoke North</fullName>
            </value>
            <value>
                <fullName>Ward 3 Etobicoke Centre</fullName>
            </value>
            <value>
                <fullName>Ward 4 Etobicoke Centre</fullName>
            </value>
            <value>
                <fullName>Ward 5 Etobicoke-Lakeshore</fullName>
            </value>
            <value>
                <fullName>Ward 6 Etobicoke-Lakeshore</fullName>
            </value>
            <value>
                <fullName>Ward 7 York West</fullName>
            </value>
            <value>
                <fullName>Ward 8 York West</fullName>
            </value>
            <value>
                <fullName>Ward 9 York Centre</fullName>
            </value>
            <value>
                <fullName>Ward 10 York Centre</fullName>
            </value>
            <value>
                <fullName>Ward 11 York South-Weston</fullName>
            </value>
            <value>
                <fullName>Ward 12 York South-Weston</fullName>
            </value>
            <value>
                <fullName>Ward 13 Parkdale-High Park</fullName>
            </value>
            <value>
                <fullName>Ward 14 Parkdale-High Park</fullName>
            </value>
            <value>
                <fullName>Ward 15 Eglinton-Lawrence</fullName>
            </value>
            <value>
                <fullName>Ward 16 Eglinton-Lawrence</fullName>
            </value>
            <value>
                <fullName>Ward 17 Davenport</fullName>
            </value>
            <value>
                <fullName>Ward 18 Davenport</fullName>
            </value>
            <value>
                <fullName>Ward 19 Trinity-Spadina</fullName>
            </value>
            <value>
                <fullName>Ward 20 Trinity Spadina</fullName>
            </value>
            <value>
                <fullName>Ward 21 St. Paul&#39;s</fullName>
            </value>
            <value>
                <fullName>Ward 22 St. Paul&#39;s</fullName>
            </value>
            <value>
                <fullName>Ward 23 Willowdale</fullName>
            </value>
            <value>
                <fullName>Ward 24 Willowdale</fullName>
            </value>
            <value>
                <fullName>Ward 25 Don Valley West</fullName>
            </value>
            <value>
                <fullName>Ward 26 Don Valley West</fullName>
            </value>
            <value>
                <fullName>Ward 27 Toronto Centre-Rosedale</fullName>
            </value>
            <value>
                <fullName>Ward 28 Toronto Centre-Rosedale</fullName>
            </value>
            <value>
                <fullName>Ward 29 Toronto-Danforth</fullName>
            </value>
            <value>
                <fullName>Ward 30 Toronto-Danforth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>