force-app/main/default/objects/Activity/listViews/My_Activities_Closed.listView-meta.xml
<ListView>
    <fullName>My_Activities_Closed</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>EVENT.LOCATION</columns>
    <columns>EVENT.DURATION</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Activities - Closed</label>
</ListView>